--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 ---
-title: Urban
+title: Techncolor
 ---
 
 <section class="hero diagonal">
 	<div class="container">
-		<h2 class="editable">We build websites</h2>
-		<p class="subtext editable">This is the <strong>Urban</strong> template from <a href="https://cloudcannon.com/">CloudCannon</a>. Urban is a strong foundation for the web presence of your agency.</p>
-		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
+		<h2 class="editable"><strong>Technicolor俱乐部</strong></h2>
+		<p class="subtext editable">
+			原创意编程俱乐部，北大附中中心社团。<br>
+
+		</p>
+		<p><a class="button alt" href="{{ site.baseurl }}/contact/">联系我们！</a></p>
 	</div>
 </section>
 
